# MediaGrab

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  prerelease-build.yml  release.yml
.storybook/: main.ts  preview.ts
e2e/: app.spec.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proptest-regressions/download/: parser.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: debug.rs  download.rs  executables.rs  folder.rs  history.rs  media_info.rs  mod.rs  playlist.rs  preferences.rs  queue.rs  subtitles.rs  update.rs
src-tauri/src/download/: args.rs  manager.rs  mod.rs  parser.rs  process.rs  queue.rs  tests.rs
src-tauri/src/download/manager/: tests.rs
src-tauri/src/models/: config.rs  error.rs  mod.rs  progress.rs  state.rs  tests.rs
src-tauri/src/utils/: logging.rs  mod.rs  paths.rs  process.rs  sanitize.rs
src/components/: BatchUrlImport.tsx  CancelButton.tsx  CopyDebugInfoButton.tsx  DownloadButton.tsx  DownloadFormSection.tsx  DragOverlay.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FolderPicker.tsx  FormatSelector.stories.tsx  FormatSelector.tsx  HistoryPanel.tsx  MediaInfoPreview.tsx  MissingExecutablesAlert.tsx  NetworkStatusBanner.tsx  OnboardingTour.tsx  OpenFolderButton.tsx  PanelManager.tsx  PlatformIcon.tsx  PlayButton.tsx  PlaylistPanel.tsx  ProgressBar.stories.tsx  ProgressBar.tsx  QualitySelector.tsx  QueueItemCard.tsx  QueuePanel.tsx  ScheduleDownload.tsx  (+15 more)
(+47 files in other folders)
